# icon-theme-viewer

./: CMakeLists.txt  README.md  framelesswindow.cpp  framelesswindow.h  freedesktoptheme.cpp  freedesktoptheme.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
